tests/snapshots/sources__allows_bitbucket_org.snap
---
source: tests/sources.rs
expression: diags
---
[
  {
    "fields": {
      "code": "source-not-allowed",
      "graphs": [
        {
          "Krate": {
            "name": "amethyst_core",
            "version": "0.10.1"
          },
          "parents": [
            {
              "Krate": {
                "kind": "build",
                "name": "sources",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 22,
          "line": 7,
          "message": "source",
          "span": "git+https://gitlab.com/amethyst-engine/amethyst?rev=0c2da617"
        }
      ],
      "message": "detected 'git' source not explicitly allowed",
      "severity": "error"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "source-not-allowed",
      "graphs": [
        {
          "Krate": {
            "name": "amethyst_error",
            "version": "0.5.1"
          },
          "parents": [
            {
              "Krate": {
                "name": "amethyst_core",
                "version": "0.10.1"
              },
              "parents": [
                {
                  "Krate": {
                    "kind": "build",
                    "name": "sources",
                    "version": "0.1.0"
                  }
                }
              ]
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 22,
          "line": 8,
          "message": "source",
          "span": "git+https://gitlab.com/amethyst-engine/amethyst?rev=0c2da617"
        }
      ],
      "message": "detected 'git' source not explicitly allowed",
      "severity": "error"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "source-not-allowed",
      "graphs": [
        {
          "Krate": {
            "name": "anyhow",
            "version": "1.0.68"
          },
          "parents": [
            {
              "Krate": {
                "name": "sources",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 15,
          "line": 9,
          "message": "source",
          "span": "git+https://github.com/dtolnay/anyhow?branch=master"
        }
      ],
      "message": "detected 'git' source not explicitly allowed",
      "severity": "error"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "source-not-allowed",
      "graphs": [
        {
          "Krate": {
            "name": "krates",
            "version": "0.12.6"
          },
          "parents": [
            {
              "Krate": {
                "name": "sources",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 15,
          "line": 45,
          "message": "source",
          "span": "git+https://github.com/EmbarkStudios/krates?branch=main"
        }
      ],
      "message": "detected 'git' source not explicitly allowed",
      "severity": "error"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "allowed-by-organization",
      "graphs": [
        {
          "Krate": {
            "name": "line-wrap",
            "version": "0.1.1"
          },
          "parents": [
            {
              "Krate": {
                "kind": "build",
                "name": "sources",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 17,
          "line": 49,
          "message": "source",
          "span": "git+https://bitbucket.org/marshallpierce/line-wrap-rs"
        },
        {
          "column": 19,
          "line": 3,
          "message": "organization allowance",
          "span": "marshallpierce"
        }
      ],
      "message": "source allowed by organization allowance",
      "severity": "note"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "source-not-allowed",
      "graphs": [
        {
          "Krate": {
            "name": "spdx",
            "version": "0.3.4"
          },
          "parents": [
            {
              "Krate": {
                "kind": "dev",
                "name": "sources",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 12,
          "line": 94,
          "message": "source",
          "span": "git+https://github.com/EmbarkStudios/spdx?tag=0.3.4"
        }
      ],
      "message": "detected 'git' source not explicitly allowed",
      "severity": "error"
    },
    "type": "diagnostic"
  }
]
