tests/snapshots/sources__allows_registry_index_git.snap
---
source: tests/sources.rs
expression: diags
---
[
  {
    "fields": {
      "code": "allowed-source",
      "graphs": [
        {
          "Krate": {
            "name": "crate-one",
            "version": "0.1.0"
          },
          "parents": [
            {
              "Krate": {
                "name": "non-crates-io-registry",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 17,
          "line": 1,
          "message": "source",
          "span": "registry+https://dl.cloudsmith.io/public/embark/deny/cargo/index.git"
        },
        {
          "column": 10,
          "line": 3,
          "message": "source allowance",
          "span": "https://dl.cloudsmith.io/public/embark/deny/cargo/index.git"
        }
      ],
      "message": "'registry' source explicitly allowed",
      "severity": "note"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "source-not-allowed",
      "graphs": [
        {
          "Krate": {
            "name": "crate-two",
            "version": "0.2.0"
          },
          "parents": [
            {
              "Krate": {
                "name": "non-crates-io-registry",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 17,
          "line": 2,
          "message": "source",
          "span": "sparse+https://cargo.cloudsmith.io/embark/deny/"
        }
      ],
      "message": "detected 'registry' source not explicitly allowed",
      "severity": "error"
    },
    "type": "diagnostic"
  }
]
